camel-http-common - as a common module